// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sending Domains List Page renders correct columns with subaccounts 1`] = `
Array [
  Object {
    "label": "Domain",
    "sortKey": "domain",
    "width": "30%",
  },
  Object {
    "label": <StatusTooltipHeader />,
    "width": "40%",
  },
  Object {
    "label": "Subaccount",
    "sortKey": [Function],
    "width": "20%",
  },
]
`;

exports[`Sending Domains List Page renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create and configure your sending and bounce domains.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "content": "Learn more",
        "external": true,
        "to": "https://www.sparkpost.com/docs/getting-started/setting-up-domains/",
      },
      "show": false,
      "title": "Manage Your Domains",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add a Domain",
      "to": "/account/sending-domains/create",
    }
  }
  title="Sending Domains"
>
  <withRouter(Connect(VerifyToken)) />
  <UnverifiedWarningBanner />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Domain",
          "sortKey": "domain",
          "width": "30%",
        },
        Object {
          "label": <StatusTooltipHeader />,
          "width": "40%",
        },
      ]
    }
    defaultSortColumn="domain"
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "domain",
          "subaccount_id",
          "default",
        ],
        "itemToStringKeys": Array [
          "domain",
        ],
        "keyMap": Object {
          "default": "is_default_bounce_domain",
        },
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "domain": "test.com",
          "is_default_bounce_domain": true,
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "dkim_status": "valid",
            "mx_status": "valid",
            "ownership_verified": true,
          },
          "subaccount_id": 3,
        },
        Object {
          "domain": "test2.com",
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "dkim_status": "valid",
            "mx_status": "valid",
            "ownership_verified": false,
          },
        },
      ]
    }
  />
</Page>
`;

exports[`Sending Domains List Page renders error banner correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create and configure your sending and bounce domains.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "content": "Learn more",
        "external": true,
        "to": "https://www.sparkpost.com/docs/getting-started/setting-up-domains/",
      },
      "show": false,
      "title": "Manage Your Domains",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Add a Domain",
      "to": "/account/sending-domains/create",
    }
  }
  title="Sending Domains"
>
  <withRouter(Connect(VerifyToken)) />
  <UnverifiedWarningBanner />
  <ApiErrorBanner
    errorDetails="error"
    message="Sorry, we seem to have had some trouble loading your domains."
    reload={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": undefined,
      }
    }
  />
</Page>
`;

exports[`Sending Domains List Page renders loading correctly 1`] = `<Loading />`;

exports[`Sending Domains List Page renders rows correctly 1`] = `
Array [
  Array [
    <PageLink
      to="/account/sending-domains/edit/test.com"
    >
      test.com
    </PageLink>,
    <DomainStatusCell
      domain={
        Object {
          "domain": "test.com",
          "is_default_bounce_domain": true,
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "dkim_status": "valid",
            "mx_status": "valid",
            "ownership_verified": true,
          },
          "subaccount_id": 3,
        }
      }
    />,
    <SubaccountTag
      all={false}
      id={3}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
  ],
  Array [
    <PageLink
      to="/account/sending-domains/edit/test2.com"
    >
      test2.com
    </PageLink>,
    <DomainStatusCell
      domain={
        Object {
          "domain": "test2.com",
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "dkim_status": "valid",
            "mx_status": "valid",
            "ownership_verified": false,
          },
        }
      }
    />,
    null,
  ],
]
`;

exports[`Sending Domains List Page renders rows correctly with no subaccounts 1`] = `
Array [
  Array [
    <PageLink
      to="/account/sending-domains/edit/test.com"
    >
      test.com
    </PageLink>,
    <DomainStatusCell
      domain={
        Object {
          "domain": "test.com",
          "is_default_bounce_domain": true,
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "dkim_status": "valid",
            "mx_status": "valid",
            "ownership_verified": true,
          },
          "subaccount_id": 3,
        }
      }
    />,
  ],
  Array [
    <PageLink
      to="/account/sending-domains/edit/test2.com"
    >
      test2.com
    </PageLink>,
    <DomainStatusCell
      domain={
        Object {
          "domain": "test2.com",
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "dkim_status": "valid",
            "mx_status": "valid",
            "ownership_verified": false,
          },
        }
      }
    />,
  ],
]
`;
